--- a/projects/angular-custom-datepicker/package.json
+++ b/projects/angular-custom-datepicker/package.json
@@ -1,10 +1,21 @@
 {
   "name": "angular-custom-datepicker",
-  "version": "0.0.1",
+  "description": "Custom Datepicker component for Angular",
+  "version": "0.0.2",
   "peerDependencies": {
     "@angular/common": "^13.3.0",
     "@angular/core": "^13.3.0"
   },
+  "repository": "https://github.com/dds05/angular-custom-datepicker",
+  "homepage": "https://angular-datepicker.netlify.app/",
+  "keywords": [
+    "angular",
+    "calendar",
+    "datepicker",
+    "calendar-component",
+    "custom-calendar",
+    "custom-datepicker"
+  ],
   "dependencies": {
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
