--- a/projects/angular-custom-datepicker/package.json
+++ b/projects/angular-custom-datepicker/package.json
@@ -17,7 +17,7 @@
     "custom-datepicker"
   ],
   "dependencies": {
-    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/angular-fontawesome": "^0.10.2 || ^1.0.0 || ^2.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "tslib": "^2.3.0"
   }
